--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <input name="strength" id="strengthLevel" type="range" value="75">
                       </div>
 
-                      <button type="submit" class="btn btn-outline-primary">Submit</button>
+                      <button type="submit" value="Open Window" onClick="window.open('payment.html')" class="btn btn-outline-primary">Submit</button>
                       <button type="reset" class="btn btn-outline-primary-">Reset</button>
                 </form>
             </div>
